# Space-Explora

./: CONTRIBUTING.md  README.md  SUPPORT.md  missions.db  pyproject.toml  requirements.txt  test.db
.github/workflows/: ci.yml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/api/: make_api_request.py  nasa.py  spacex.py
app/templates/: base.html  index.html  news.html
