[tool.poetry]
name = "space-nomad"
version = "0.1.0"
description = "A simple space exploration web application."
authors = ["Sakhile L. Ndlazi <sakhilelindah@gmail.com>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
