[tool.poetry]
name = "space-nomad"
version = "0.1.0"
description = "A simple space exploration web application."
authors = ["Sakhile L. Ndlazi <sakhilelindah@gmail.com>"]
license = "GPL-3.0 license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
requests = "^2.32.3"
fastapi-utils = "^0.8.0"
typing-inspect = "^0.9.0"
jinja2 = "^3.1.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
